we changed background to blue and added a header navigation to the page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="css/main.css">
+    </head>
     <body>
+        <header>
+            <a href="/home.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/contact.html">Contact</a>
+            <a href="/map.html">Map</a>
+        </header>
         <p>This is great</p>
         <footer>Copyrights to codingphase</footer>
     </body>
