we added a sidebar with ads

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a href="/map.html">Map</a>
         </header>
         <p>This is great</p>
+        <aside><img src="ad.jpg"></aside>
         <footer>Copyrights to codingphase</footer>
     </body>
 </html>
