added unordered list

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head></head>
     <body>
         <p>This is great</p>
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
         <footer>Copyrights to codingphase</footer>
     </body>
 </html>
