restructured aside element for better readabililty

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <a href="/map.html">Map</a>
         </header>
         <p>This is great</p>
-        <aside><img src="ad.jpg"></aside>
+        <aside>
+            <img src="ad.jpg">
+        </aside>
         <ul>
             <li>one</li>
             <li>two</li>
